<?xml version="1.0" encoding="utf-8"?><FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/layout"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context="com.quantum_guys.dncc_eco_sync.ui.activities.account.RegisterActivity"    tools:ignore="MergeRootFrame">    <androidx.core.widget.NestedScrollView        android:layout_width="match_parent"        android:layout_height="wrap_content">        <androidx.constraintlayout.widget.ConstraintLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:orientation="vertical"            android:soundEffectsEnabled="false"            android:splitMotionEvents="false"            app:layout_constraintBottom_toBottomOf="parent"            tools:layout_editor_absoluteX="15dp">            <androidx.constraintlayout.widget.ConstraintLayout                android:id="@+id/zila"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginTop="8dp"                android:layout_marginEnd="8dp"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">                <LinearLayout                    android:id="@+id/zela"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_weight="8"                    android:background="@drawable/edit_text_bg"                    android:orientation="horizontal"                    app:layout_constraintBottom_toBottomOf="parent"                    app:layout_constraintEnd_toEndOf="parent"                    app:layout_constraintStart_toStartOf="parent"                    app:layout_constraintTop_toTopOf="parent"                    tools:ignore="UselessParent">                    <Spinner                        android:id="@+id/spinner_zila"                        android:layout_width="match_parent"                        android:layout_height="45dp"                        android:backgroundTint="#FFFFFF"                        android:overlapAnchor="false"                        android:spinnerMode="dropdown" />                </LinearLayout>                <TextView                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginStart="10dp"                    android:background="?android:windowBackground"                    android:paddingLeft="3dp"                    android:paddingRight="3dp"                    android:text="@string/location"                    app:layout_constraintBottom_toTopOf="@+id/zela"                    app:layout_constraintStart_toStartOf="@+id/zela"                    app:layout_constraintTop_toTopOf="@+id/zela" />            </androidx.constraintlayout.widget.ConstraintLayout>            <androidx.constraintlayout.widget.ConstraintLayout                android:id="@+id/onushod"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginTop="8dp"                android:layout_marginEnd="8dp"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/email_holder">                <LinearLayout                    android:id="@+id/onu"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_weight="8"                    android:background="@drawable/edit_text_bg"                    android:orientation="horizontal"                    app:layout_constraintBottom_toBottomOf="parent"                    app:layout_constraintEnd_toEndOf="parent"                    app:layout_constraintStart_toStartOf="parent"                    app:layout_constraintTop_toTopOf="parent"                    tools:ignore="UselessParent">                    <Spinner                        android:id="@+id/spinner_class_level"                        android:layout_width="match_parent"                        android:layout_height="45dp"                        android:backgroundTint="#FFFFFF"                        android:overlapAnchor="false"                        android:spinnerMode="dropdown" />                </LinearLayout>                <TextView                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginStart="10dp"                    android:background="?android:windowBackground"                    android:paddingLeft="3dp"                    android:paddingRight="3dp"                    android:text="@string/class_level"                    app:layout_constraintBottom_toTopOf="@+id/onu"                    app:layout_constraintStart_toStartOf="@+id/onu"                    app:layout_constraintTop_toTopOf="@+id/onu" />            </androidx.constraintlayout.widget.ConstraintLayout>            <androidx.constraintlayout.widget.ConstraintLayout                android:id="@+id/lyGiftList"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginTop="8dp"                android:layout_marginEnd="8dp"                android:visibility="visible"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/onushod">                <LinearLayout                    android:id="@+id/linearLayout9"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_weight="8"                    android:background="@drawable/edit_text_bg"                    android:orientation="horizontal"                    app:layout_constraintBottom_toBottomOf="parent"                    app:layout_constraintEnd_toEndOf="parent"                    app:layout_constraintStart_toStartOf="parent"                    app:layout_constraintTop_toTopOf="parent"                    tools:ignore="UselessParent">                    <Spinner                        android:id="@+id/spinner_group"                        android:layout_width="match_parent"                        android:layout_height="45dp"                        android:backgroundTint="#FFFFFF"                        android:overlapAnchor="false"                        android:spinnerMode="dropdown" />                </LinearLayout>                <TextView                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginStart="10dp"                    android:background="?android:windowBackground"                    android:paddingLeft="3dp"                    android:paddingRight="3dp"                    android:text="@string/group_or_subject"                    app:layout_constraintBottom_toTopOf="@+id/linearLayout9"                    app:layout_constraintStart_toStartOf="@+id/linearLayout9"                    app:layout_constraintTop_toTopOf="@+id/linearLayout9" />            </androidx.constraintlayout.widget.ConstraintLayout>            <TextView                android:id="@+id/textView11"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="32dp"                android:fontFamily="@font/regular"                android:gravity="center"                android:text="Register On ত্বারক"                android:textColor="?customColorValue"                android:textSize="25sp"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toTopOf="parent"                tools:ignore="HardcodedText,MissingPrefix" />            <androidx.constraintlayout.widget.ConstraintLayout                android:id="@+id/constraintLayout6"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="24dp"                android:orientation="horizontal"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/textView11">                <de.hdodenhof.circleimageview.CircleImageView                    android:id="@+id/profile_image"                    android:layout_width="120dp"                    android:layout_height="120dp"                    android:onClick="setProfilepic"                    android:src="@drawable/ic_logo"                    app:layout_constraintStart_toStartOf="parent"                    app:layout_constraintTop_toTopOf="parent" />                <Button                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginStart="8dp"                    android:layout_marginEnd="8dp"                    android:onClick="setProfilepic"                    android:text="Select profile picture"                    android:textAllCaps="false"                    android:textColor="#757575"                    android:textSize="16sp"                    app:layout_constraintBottom_toBottomOf="@+id/profile_image"                    app:layout_constraintEnd_toEndOf="parent"                    app:layout_constraintStart_toEndOf="@+id/profile_image"                    app:layout_constraintTop_toTopOf="@+id/profile_image"                    tools:ignore="HardcodedText" />            </androidx.constraintlayout.widget.ConstraintLayout>            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/textInputLayout5"                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginTop="8dp"                android:layout_marginEnd="8dp"                android:hint="Full Name*"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"                tools:ignore="HardcodedText">                <EditText                    android:id="@+id/name"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:inputType="textCapWords"                    android:maxLength="25"                    android:importantForAutofill="no"                    tools:ignore="LabelFor" />            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/textInputLayout6"                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginEnd="8dp"                android:hint="Institute Name"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/deptName"                tools:ignore="HardcodedText">                <EditText                    android:id="@+id/institute_name"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:inputType="textPersonName"                    android:maxLength="25"                    tools:ignore="Autofill,LabelFor" />            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/deptName"                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginTop="8dp"                android:layout_marginEnd="8dp"                android:hint="Department Name"                android:visibility="gone"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/lyGiftList"                tools:ignore="HardcodedText">                <EditText                    android:id="@+id/dept_name"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:inputType="textPersonName"                    android:maxLength="25"                    tools:ignore="Autofill,LabelFor" />            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/email_holder"                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginTop="8dp"                android:layout_marginEnd="8dp"                android:hint="Email*"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"                tools:ignore="HardcodedText">                <EditText                    android:id="@+id/email"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:inputType="textEmailAddress"                    tools:ignore="Autofill,LabelFor" />            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/password_holder"                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginTop="8dp"                android:layout_marginEnd="8dp"                android:hint="Password*"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/zila"                app:passwordToggleEnabled="true"                tools:ignore="HardcodedText">                <EditText                    android:id="@+id/password"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:inputType="textPassword"                    tools:ignore="Autofill,LabelFor" />            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.button.MaterialButton                android:id="@+id/button"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginTop="8dp"                android:layout_marginEnd="8dp"                android:padding="10dp"                android:text="Sign Up"                android:textAllCaps="false"                android:backgroundTint="?colorPrimary"                app:iconGravity="textStart"                app:icon="@drawable/ic_next"                android:textSize="16sp"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/password_holder"                tools:ignore="HardcodedText,RtlHardcoded" />            <Button                style="@style/Widget.MaterialComponents.Button.OutlinedButton"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="8dp"                android:layout_marginBottom="8dp"                android:onClick="onLogin"                android:text="I am already a member"                android:textAllCaps="true"                android:textSize="16sp"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/button"                tools:ignore="HardcodedText" />        </androidx.constraintlayout.widget.ConstraintLayout>    </androidx.core.widget.NestedScrollView></FrameLayout>